--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -198,7 +198,8 @@
                     <img src="/images/img_symbol.png" alt="ak홀딩스 심볼마크">
                 </span>
                 <span class="symbol-size">
-                    <img src="/images/img_symbol_size.png" alt="ak홀딩스 심볼마크 최소크기">
+                    <img src="/images/img_symbol_size_m.png" alt="ak홀딩스 심볼마크 최소크기" class="mo"><!-- 6/8 업데이트 모바일/PC 이미지 분기 -->
+                    <img src="/images/img_symbol_size.png" alt="ak홀딩스 심볼마크 최소크기" class="pc">
                 </span>
                 <p class="comment">※ 심벌마크를 단독으로 사용하는 것을 허용하지 않습니다.</p>
             </div>
