--- a/list.html
+++ b/list.html
@@ -55,7 +55,9 @@
         <td>1</td>
         <td>그룹 소개 > Corporate Identity > 의미</td>
         <td><a href="/introduce_ci.html">introduce_ci.html</a></td>
-        <td><p style="color:#ff00ff;">6/2업데이트</p><p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p><p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+            <p style="color: #00498C">6/8 업데이트 모바일/PC 이미지 분기</p>
+        </td>
     </tr>
     <tr>
         <td>1</td>
