--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -208,7 +208,7 @@
                     <a href="/images/AK홀딩스(주)CI.ai" class="btn-download">AI 파일 다운로드</a>
                 </li>
                 <li>
-                    <a href="/images/AK홀딩스(주)CI.JPG.zip" class="btn-download">JPG 파일 다운로드</a> <!-- 6/8 업데이트 zip파일로 변경 -->
+                    <a href="/images/AK홀딩스(주)CI.zip" class="btn-download">JPG 파일 다운로드</a> <!-- 6/8 업데이트 zip파일로 변경 -->
                 </li>
             </ul>
         </div>
