--- a/investment_info_list_detail.html
+++ b/investment_info_list_detail.html
@@ -182,170 +182,49 @@
 <div class="content">
     <div class="cont">
         <div class="bbsWrap">
-            <!-- 공고 PC -->
-            <table class="bbsTbl pc">
-                <colgroup>
-                    <col width="12%">
-                    <col width="*">
-                    <col width="12%" span="2">
-                </colgroup>
-                <thead>
-                <tr>
-                    <th>번호</th>
-                    <th>제목</th>
-                    <th>작성일</th>
-                    <th>첨부파일</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>999</td>
-                    <td><a href="#">제52기 대차대조표 공고</a></td>
-                    <td>2022.04.29</td>
-                    <td><a href="javascript:;" class="btn-download">다운로드</a></td>
-                </tr>
-                <tr>
-                    <td>999</td>
-                    <td><a href="#">제52기 대차대조표 공고</a></td>
-                    <td>2022.04.29</td>
-                    <td><a href="javascript:;" class="btn-download">다운로드</a></td>
-                </tr>
-                <tr>
-                    <td>999</td>
-                    <td><a href="#">제52기 대차대조표 공고</a></td>
-                    <td>2022.04.29</td>
-                    <td><a href="javascript:;" class="btn-download">다운로드</a></td>
-                </tr>
-                <tr>
-                    <td>999</td>
-                    <td><a href="#">제52기 대차대조표 공고</a></td>
-                    <td>2022.04.29</td>
-                    <td><a href="javascript:;" class="btn-download">다운로드</a></td>
-                </tr>
-                <tr>
-                    <td>999</td>
-                    <td><a href="#">제52기 대차대조표 공고</a></td>
-                    <td>2022.04.29</td>
-                    <td><a href="javascript:;" class="btn-download">다운로드</a></td>
-                </tr>
-                <tr>
-                    <td>999</td>
-                    <td><a href="#">제52기 대차대조표 공고</a></td>
-                    <td>2022.04.29</td>
-                    <td><a href="javascript:;" class="btn-download">다운로드</a></td>
-                </tr>
+            <strong class="cont_tit">[그룹뉴스] AK플라자, 애경그룹과<br class="mo">함께 강원 산불 피해 복구 지원</strong>
+            <div class="bbs_detail">
+                <div class="top">
+                    <div class="cate">
+                        <span class="item">계열사</span>
+                        <em class="value">AK플라자</em>
+                    </div>
+                    <div class="info">
+                        <div>
+                            <span class="item">작성일</span>
+                            <em class="value">2022.05.11</em>
+                        </div>
+                        <!-- 06/15 업데이트 조회수 삭제 -->
+                    </div>
+                </div>
+                <div class="bbs-view-content">AK플라자가 애경그룹과 함께 강원 산불 피해
+                    지역 복구 지원에 나섰다.
 
-                <!-- 06/14업데이트 no-data 추가 -->
-                <tr class="no-data">
-                    <td colspan="4">검색 결과가 없습니다</td>
-                </tr>
-                </tbody>
-            </table>
-            <!-- //공고 PC -->
+                    AK플라자는 애경그룹 지주회사인 AK홀딩스,
+                    그룹 화학 계열사인 애경케미칼과 함께 강원 산불 피해 지역에 묘목을 기부하기로 결정했다.
+                    금번 3사가 기부할 묘목을 통해 강원 지역에
+                    조성될 숲은 5천 평(1만6529m2)으로 이는
+                    축구장 2개 넓이와 맞먹는 규모이며, AK플라자가 지역 상생 활동을 위해 조성해온 ‘애경숲’ 중에서는최대 규모다. 이번 기부를 통해 AK플라자는 올해까지 강원 및 수원, 분당 지역에 총 1만 평(3만3058m2) 규모의 ‘애경숲’을 조성하게 됐다. AK플라자는 연내 관련 기관과의 협의를 통해 구체적인 숲 조성 지역과 수종 등을 선정할 예정이며, AK플라자 임직원들과 함께 식재 참여를 위한 자리도 마련할 계획이다.
 
-            <!-- 공고 MOBIL -->
-            <div class="bbsList has-download mo">
-                <ul>
-                    <li>
-                        <a href="#">제52기 대차대조표 공고</a>
-                        <span class="date">2022.04.29</span>
-                        <a href="javascript:;" class="btn-download"><span class="blind">다운로드</span></a>
-                    </li>
-                    <li>
-                        <a href="#">제52기 대차대조표 공고</a>
-                        <span class="date">2022.04.29</span>
-                        <a href="javascript:;" class="btn-download"><span class="blind">다운로드</span></a>
-                    </li>
-                    <li>
-                        <a href="#">제52기 대차대조표 공고</a>
-                        <span class="date">2022.04.29</span>
-                        <a href="javascript:;" class="btn-download"><span class="blind">다운로드</span></a>
-                    </li>
-                    <li>
-                        <a href="#">제52기 대차대조표 공고</a>
-                        <span class="date">2022.04.29</span>
-                        <a href="javascript:;" class="btn-download"><span class="blind">다운로드</span></a>
-                    </li>
+                    나아가, 묘목 기부 조성금 마련을 위해 AK플라자는 원주점과 함께 ‘2022 한 그루의 힘! 강원도의 힘!’ 캠페인을 전개한다. ‘2022 한 그루의 힘! 강원도의 힘!’은 강원도 유일 백화점인 AK플라자 원주점이 주축이 되어 사회적 책임에 최선을 다하고 나아가 고객과 함께 피해 지역 복구에 힘쓰기 위해 기획됐다.
 
-                    <!-- 06/14업데이트 no-data 추가 -->
-                    <li class="no-data">
-                        검색 결과가 없습니다
-                    </li>
-                </ul>
+                    특히, 이번 캠페인은 단발성 이벤트가 아닌 올해 10월까지 진행되는 장기 캠페인으로 다양한 고객 참여형 행사로 마련된 기금을 통해 피해 지역에 묘목을 기부하는
+                    방식으로 진행된다.</div>
             </div>
-            <!-- //공고 MOBIL -->
-        </div>
-        <!--<div class="download-list">
-            <ul>
-                <li>&lt;!&ndash; 6/8 업데이트 리스트 구조 수정 &ndash;&gt;
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
+            <ul class="bbs-more">
+                <li class="prev disabled"><!-- 6/8 업데이트 이전/다음글 없을 시 disabled 추가 -->
+                    <span class="pc">이전</span>
+                    <a href="#"><span class="blind">이전글보기</span>[애경케미칼] 혈액 수급난에 동참 '임직원 헌혈참여 캠페인' 진행</a>
                 </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
+                <li class="next">
+                    <span class="pc">다음</span>
+                    <a href="#"><span class="blind">다음글보기</span>[애경케미칼] 혈액 수급난에 동참 '임직원 헌혈참여 캠페인' 진행</a>
                 </li>
             </ul>
-        </div>-->
-
-        <!-- 페이징 -->
-        <div class="paging">
-            <div class="left">
-                <a href="javascript:;" class="first arrow disabled"><span class="blind">처음으로</span></a>
-                <a href="javascript:;" class="prev arrow disabled"><span class="blind">이전으로</span></a>
-            </div>
-            <div class="center">
-                <a href="javascript:;" class="cur active">1</a>
-                <a href="javascript:;" class="cur">2</a>
-                <a href="javascript:;" class="cur">3</a>
-            </div>
-            <div class="right">
-                <a href="javascript:;" class="next arrow"><span class="blind">다음으로</span></a>
-                <a href="javascript:;" class="last arrow"><span class="blind">마지막으로</span></a>
-            </div>
         </div>
-        <!-- //페이징 -->
+        <div class="btn-area">
+            <a href="#" class="btn-p"><span>목록보기</span></a>
+        </div>
     </div>
 </div>
 <!--//본문영역-->
