--- a/list.html
+++ b/list.html
@@ -252,12 +252,18 @@
     </tr>
     <tr>
         <td>10</td>
-        <td>IR > 공시정보 > 공고</td>
+        <td>IR > 공시정보 > 공고 리스트</td>
         <td><a href="/investment_info_list.html">investment_info_list.html</a></td>
         <td><p>5/29업데이트</p>
             <p style="color:#ff00ff;">6/2업데이트 - .has-tab 추가</p>
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
         </td>
+    </tr>
+    <tr>
+        <td>11</td>
+        <td>IR > 공시정보 > 공고 상세</td>
+        <td><a href="/investment_info_list_detail.html">investment_info_list_detail.html</a></td>
+        <td>6/20 업데이트 - 페이지 추가됨</td>
     </tr>
     <tr>
         <td>12</td>
